--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,7 @@ width: 15px;
     header nav .hamburger {
         display: block;
         cursor: pointer;
+        font-size:27px ;
     }
 
     header nav .hamburger i {
