--- a/css/style.css
+++ b/css/style.css
@@ -299,7 +299,7 @@ width: 15px;
 
     header nav .hamburger i {
         font-size: 35px;
-        color: #333;
+        color:red;
     }
 
     /* Adjustments for Small Mobile Devices */
